--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KODAK</title>
+    <link rel="icon" href="/img/favicon-96x96.png"/>
     <link href="/css/reset.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
 
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-    <!-- swiper -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
     <!-- JS -->
     <script defer src="/js/index.js"></script>
@@ -188,7 +190,7 @@
 </div>
 <footer>
     <div class="footer-wrap">
-        <div class="area">
+        <div class="area area-1">
             <img class="company" src="https://cafe24.poxo.com/ec01/hilightbrands/YepDBcpQi6F1EGuL9rzRwR53sSufS+QhClnCKjH6CrAE2OS/Wab2T/eCnkT85MIVQQY6EDXfaE7XuM3A6ZW05w==/_/layout/basic/img/new_footer_bi_b.png">
             <p class="font7">주식회사 하이라이트브랜즈</p>
             <ul>
@@ -205,7 +207,7 @@
             </ul>
             <span>ⓒ 2023 Hilight Brands.</span>
         </div>
-        <div class="area">
+        <div class="area area-2">
             <ul>
                 <li>Term of Use</li>
                 <li>Privacy Policy</li>
@@ -226,7 +228,7 @@
                 </a>
             </div>
         </div>
-        <div class="area">
+        <div class="area area-3">
             <ul>
                 <li>CS Center</li>
                 <li>Mon - Fri (10:00 - 17:00)</li>
@@ -234,7 +236,7 @@
                 <li>마케팅제휴 : marketing@hibs.co.kr</li>
             </ul>
         </div>
-        <div class="area">
+        <div class="area area-4">
             <ul>
                 <li>반품 & 교환</li>
                 <li>반품배송지 : 경기도 안산시 단원구 시화호수로 835 로지즈밸리 3층</li>
