--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 <img src="https://cafe24.poxo.com/ec01/hilightbrands/YepDBcpQi6F1EGuL9rzRwR53sSufS+QhClnCKjH6CrAE2OS/Wab2T/eCnkT85MIVQQY6EDXfaE7XuM3A6ZW05w==/_/layout/basic/img/bi_symbol.png" alt="코닥 로고">
             </a>
             <ul class="nav">
-                <li><a href="/html/shop.html">SHOP</a></li>
-                <li><a href="/html/camera.html">CAMERA</a></li>
-                <li><a href="/html/service.html">SERVICE</a></li>
+                <li><a href="javascript:void(0);">SHOP</a></li>
+                <li><a href="javascript:void(0);">CAMERA</a></li>
+                <li><a href="javascript:void(0);">SERVICE</a></li>
                 <li><a href="javascript:void(0);">LOOKBOOK</a></li>
                 <li><a href="javascript:void(0);">OUTLET</a></li>
-                <li><a href="/html/login.html">LOGIN</a></li>
+                <li><a href="javascript:void(0);">LOGIN</a></li>
             </ul>
         </div>
         <div class="header-mobile">
