--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="swiper-button-prev"></div>
             </div>
             <div class="view">
-                <a href="/html/shop.html">VIEW MORE</a> 
+                <a href="javascript:void(0);">VIEW MORE</a> 
             </div>
         </div>
     </div>
